--- a/_posts/2016-03-05-Moby-Dick.markdown
+++ b/_posts/2016-03-05-Moby-Dick.markdown
@@ -5,10 +5,10 @@ subtitle:   "Herman Melville"
 active: journal
 image:
   feature: "pc005.jpg"
-date:       2016-03-05 
+date:       2024-02-17 
 header-img: "img/postcover/pc005.jpg"
-tags: [tag02]
-categories: [cat03]
+tags: [Travel]
+categories: [Malaysia]
 comments: false
 ---
 
