[doc]: update subscribe information.

--- a/_applications/2019-01-15-Nepal-ABC.markdown
+++ b/_applications/2019-01-15-Nepal-ABC.markdown
@@ -305,7 +305,7 @@ Photography by <a><strong>YILING YIN</strong></a>.
 If you enjoy my stories, please subscribe to my travel blog by entering your email below and clicking the subscribe button.
 </p>
 <p>
-如果您喜欢我的故事，请在下方输入您的电子邮件并点击订阅按钮，订阅我的旅行博客 ⬇️
+如果您喜欢我的故事，欢迎在下方输入您的电子邮件并点击订阅，第一时间获取更多精彩的旅行分享与独家内容！ ⬇️
 </p>
 </div>
 
