[doc]: update subscribe information.

--- a/_applications/2019-01-15-Nepal-ABC.markdown
+++ b/_applications/2019-01-15-Nepal-ABC.markdown
@@ -302,7 +302,7 @@ Photography by <a><strong>YILING YIN</strong></a>.
 </p>
 
 <p>
-If you enjoy my stories, please subscribe to my travel blog by entering your email below and clicking the subscribe button.
+If you enjoyed my story, feel free to enter your email below and hit subscribe to be the first to receive more exciting travel updates and exclusive content!
 </p>
 <p>
 如果您喜欢我的故事，欢迎在下方输入您的电子邮件并点击订阅，第一时间获取更多精彩的旅行分享与独家内容！ ⬇️
