[doc]: update terking journal in Nepal.

--- a/_posts/2019-01-15-Nepal-ABC.markdown
+++ b/_posts/2019-01-15-Nepal-ABC.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Annapurna Base Camp 安纳普尔纳大本营"
+title:      "Annapurna Base Camp Trek 安纳普尔纳大本营徒步"
 subtitle:   "Annapurna Base Camp Trek (ABC) ABC路线"
 active: journal
 image:
@@ -16,13 +16,16 @@ comments: false
 <h2>Annapurna (mountain range) 安纳普尔那山脉</h2>
 <blockquote>
 <p>Annapurna is a massif in the Himalayas in north-central Nepal that includes one peak over 8,000 metres (26,247 ft), thirteen peaks over 7,000 metres (22,966 ft), and sixteen more over 6,000 metres (19,685 ft).[3] The massif is 55 kilometres (34 mi) long, and is bounded by the Kali Gandaki Gorge on the west, the Marshyangdi River on the north and east, and by the Pokhara Valley on the south. At its western end, the massif encloses a high basin called the Annapurna Sanctuary. The highest peak of the massif, Annapurna I Main, is the 10th highest mountain in the world at 8,091 metres (26,545 ft) above sea level. [Cite:Wikipedia]</p>
+
 <p>安纳普尔纳是尼泊尔北部中部喜马拉雅山脉的一座山脉，包括一个海拔超过8,000米（26,247英尺）的山峰，十三座海拔超过7,000米（22,966英尺）的山峰，以及另外十六座海拔超过6,000米（19,685英尺）的山峰。该山脉长55公里（34英里），西部被卡利甘达基峡谷环绕，北部和东部被马河环绕，南部被博卡拉山谷环绕。在其西端，山脉封闭了一个高山盆地，称为安纳普尔纳圣域。山脉的最高峰安纳普尔纳一号峰，海拔8,091米（26,545英尺），是世界第十高的山.</p>
 <p>Maurice Herzog led a French expedition to its summit through the north face in 1950, making it the first eight-thousander to be successfully climbed.[Cite:Wikipedia]</p>
 <p>毛里斯·赫尔佐格在1950年领导了一支法国登山队通过北壁成功登顶，使其成为第一个成功登顶的八千米高峰。</p>
 <p>The name for the range comes from the Hindu deity Annapurna meaning the giver of food and nourishment.[Cite:Wikipedia]</p>
 <p>该地区得名于印度教神祇安纳普尔纳，意为“食物和滋养的赐予者”.</p>
+
 <p>The entire massif and surrounding area are protected within the 7,629-square-kilometre (2,946 sq mi) Annapurna Conservation Area, the first and largest conservation area in Nepal. The Annapurna Conservation Area is home to several world-class treks, including the Annapurna Sanctuary and Annapurna Circuit.[Cite:Wikipedia]</p>
 <p>整个山脉及其周围地区都受到7,629平方公里（2,946平方英里）的安纳普尔纳保护区保护，这是尼泊尔第一个也是最大的保护区。安纳普尔纳保护区是世界上几条一流的徒步旅行线路的家园，包括安纳普尔纳圣域和安纳普尔纳环线。</p>
+
 <p>The Annapurna peaks have been among the world's most treacherous mountains to climb with the particular case of the extremely steep south face of Annapurna I Main – a wall of rock that rises 3,000 metres (9,800 feet) – making it one of the most difficult climbs in the world.[6] By January 2022, there had been 365 summit ascents of Annapurna I Main, and 72 climbing fatalities for a fatality rate of just under 20 percent.[Cite:Wikipedia]</p>
 <p>安纳普尔纳峰一直是世界上最危险的登山之一，尤其是安纳普尔纳一号峰的极陡南壁——一道高耸的岩壁，高3,000米（9,800英尺）——使其成为世界上最困难的攀登之一。截至2022年1月，已有365次登顶安纳普尔纳一号峰，72人死于攀登，死亡率略低于20%。</p>
 </blockquote>
@@ -30,24 +33,24 @@ comments: false
 
 <br>
 <div class="crossnote markdown-preview  ">
-<h1>Incomplete Travel Journal 不完全旅行日志</h1>
-<p>-- BY YILING YIN</p>
+<h1>Travel Journal: Stories from the Road 旅行日志：路上的故事</h1>
 <h2>Itinerary 行程</h2>
 
 <p>
 <figure>
   <img src="{{ site.baseurl }}/img/journal/Nepal/pc001.jpg" alt="alt text" width="780px" height="520px">
-  <figcaption style="font-size: 14px; color: gray;">行程</figcaption>
+  <figcaption style="font-size: 14px; color: gray;">Itinerary 行程</figcaption>
   </figure>
 </p>
 
-<h2>Recording 记录</h2>
 <h3>Preface 前言</h3>
 <blockquote>
-<p>感觉虽然2019年的尼泊尔之旅已经过去挺久了，但是经过这次的旅行，又不知不觉勾起了自己以前在路上的感觉，感觉很奇妙，可能只有同时在路上的时候才会有相同的感觉发生。虽然之前也有用文字记录下这种感觉，但是自己有段时间抽风把所有的记录都删除掉了，也没有机智的保存备份。随着时间的流逝，过去好像在被慢慢遗忘，有时候甚至怀疑自己是否有去那些地方，但当看到一张张照片以及照片里面的时候才会记起那个时刻发生的事和遇见的人。好像&quot;本我&quot;就是由这些记忆组成，害怕自己忘记这些记忆和感觉，逐渐忘记生活的新奇和美好，所以想用文字记录下来路上的事。</p>
+<p>
+虽然2019年的尼泊尔之旅已过去许久，但这次旅行却悄然唤醒了曾经在路上的感觉，那种奇妙的共鸣仿佛只有在旅途中才会重现。尽管我曾用文字记录下这些感受，但有一段时间，我冲动地删除了所有记录，也没有备份留存。随着时间流逝，过去的记忆似乎在慢慢模糊，有时甚至怀疑自己是否真的去过那些地方。然而，当翻看一张张照片时，那些瞬间的故事和遇见的人又重新浮现。或许，&quot;本我&quot;正是由这些记忆拼凑而成。我害怕遗忘这些珍贵的片段和感受，害怕逐渐失去对生活新奇与美好的感知，因此决定用文字记录下旅途中的点滴，让它们成为永恒的印记。</p>
 </blockquote>
+
 <blockquote>
-<p>2019年1月15日，此时的我呢，还是一名大四学生，准备着自己最后的毕业设计，不知道为什么萌发了去尼泊尔徒步的计划。于是逞着春节开启了尼泊尔之行。说来也巧，在尼泊尔的这段时间，刚好也是国内疫情开始爆发的时间，谁能想到疫情带走了很多人的三年，当然也包括我的。</p>
+<p>2019年1月15日，那时的我还是一名大四学生，正忙于准备毕业设计。不知为何，心中突然萌生了去尼泊尔徒步的念头，于是趁着春节假期，踏上了这段尼泊尔之旅。巧合的是，在尼泊尔期间，国内疫情开始爆发。谁能想到，这场疫情竟夺走了许多人的三年时光，其中也包括我的。这段旅程，仿佛成了疫情前最后的自由与冒险，而尼泊尔的记忆，也成为了那段特殊时期里难得的亮色。</p>
 </blockquote>
 
 <p>
@@ -58,7 +61,7 @@ comments: false
 </p>
 
 <blockquote>
-<p>从成都到Kathmandu加德满都（尼泊尔首都）的航线可以看到喜马拉雅雪山，从飞机上望去成群的雪山山脉确实带来了些许震撼。对了在登机的时候还遇见了一个尼泊尔小伙在中国留学，就和他聊了聊，中文说的可真溜。在拉萨停转的时候还遇到一位美国外教在成都一所大学教书。很巧的是之后在加德满都闲逛的时候又遇见了他们。</p>
+<p>从成都飞往加德满都（尼泊尔首都）的航线上，透过舷窗便能俯瞰喜马拉雅雪山的壮丽景色。连绵的雪山群在阳光下熠熠生辉，确实带来了一种难以言喻的震撼。登机时，我偶遇了一位在中国留学的尼泊尔小伙（赛俊杰），他的中文说得非常流利，我们聊得很投机。在拉萨转机时，又遇到了一位在成都某大学教书的美国外教（玉兰）。更巧的是，后来在加德满都闲逛时，我竟然再次遇见了他们。这种意外的重逢，仿佛为这段旅程增添了一丝奇妙的缘分。</p>
 </blockquote>
 
 <p>
@@ -69,7 +72,7 @@ comments: false
 </p>
 
 <blockquote>
-<p>在飞机上认识了一对很好的中国夫妇，聊谈中才发现他们的计划也是去徒步，大叔说这不是他第一次来尼泊尔了，这次打算和他爱人挑战BEC线，于是结伴去办电话卡和登山证。希望自己随着时间的流逝仍能保持对探索世界的热爱。</p>
+<p>在飞机上，我结识了一对非常友好的中国夫妇。聊天中得知，他们的计划也是去尼泊尔徒步。大叔告诉我，这已不是他第一次来尼泊尔了，这次他打算和爱人一起挑战BEC线（布恩山-安纳普尔纳大本营-乔姆松线）。于是，我们结伴一起去办理了电话卡和登山证。这段偶遇让我感受到旅途中的温暖与缘分，也让我更加期待接下来的徒步之旅。希望无论时间如何流逝，我都能始终保持对探索世界的热爱，像他们一样。</p>
 </blockquote>
 
 <p>
@@ -80,16 +83,18 @@ comments: false
 </p>
 
 <blockquote>
-<p>办好登山证和电话卡就和叔叔阿姨彼此告别，就准备去预定的住宿Blue Mountain Homestay。</p>
-<p>Homestay天台的风景还蛮不错的。Homestay的小哥还给我做了一杯咖啡。旅行过程不知道喝了多少杯当地的咖啡和煮奶茶：）</p>
+<p>办好登山证和电话卡后，我与那对叔叔阿姨道别，随后前往预定的住宿——Blue Mountain Homestay。这家民宿的天台风景非常不错，可以俯瞰加德满都的街景和远处的山峦。Homestay的小哥热情地为我煮了一杯咖啡。回想起来，这次旅行中不知喝了多少杯当地的咖啡和煮奶茶，每一杯都带着尼泊尔独特的温暖与风味，成为了旅途中最美好的回忆点缀之一。</p>
 </blockquote>
 
 <blockquote>
-<p>休整了一下，就联系小哥问他有没有到博卡拉的大巴，准备第二天一大早做大巴到博卡拉。我记得凌晨5点吧，就坐在大巴上等着准备出发。认识了邻座的尼泊尔女孩，和她聊了很多，我们也互相关注了Ins。她和她朋友也是准备到博卡拉徒步。她告诉我说她学的记者专业，未来计划是毕业之后到澳洲发展，我问你喜欢你的专业吗？她用非常肯定的语气说是的，我其实很诧异为什么她这么肯定且毫无保留的表达出自己喜欢的东西。3年后，我在Ins上看到，她确实去澳洲了，而我告诉的她的我的计划现在却没有实现。大巴的氛围很好，乘车的本地年轻人放起了当地的流行歌，还跟着唱了起来。虽然我一句也听不懂，问了邻座女孩，她告诉我唱的大概就是关于love kind of stuff。中途休息的时候还认识了来自澳大利亚的逆天长腿帅哥和他的当地导游。</p>
+<p>休整片刻后，我联系了Homestay的小哥，询问是否有前往博卡拉的大巴。第二天凌晨5点，我便坐上了大巴，准备出发。邻座是一位尼泊尔女孩，我们聊了很多，还互相关注了Ins。她和朋友也计划去博卡拉徒步。她告诉我，她学的是新闻专业，未来打算毕业后去澳洲发展。我问她是否喜欢自己的专业，她用非常肯定的语气回答“是的”。我有些惊讶，她竟能如此坚定且毫无保留地表达自己的热爱。三年后，我在Ins上看到，她真的去了澳洲学习。  
+</p>
+<p>
+大巴上的氛围很好，车上的本地年轻人放起了当地的流行音乐，还跟着哼唱起来。虽然我一句也听不懂，但邻座女孩告诉我，歌词大概是关于“love kind of stuff”。中途休息时，我还结识了一位来自澳大利亚的长腿帅哥和他的当地导游。这段旅程充满了意外的相遇和轻松的交流，让漫长的车程变得有趣而难忘。</p>
 </blockquote>
 
 <blockquote>
-<p>6:00 pm 终于到博卡拉，没有提前订住宿，所以下车之后还得找住的地方，谁能想遇到了好心的小龙哥，和我同一个车，说他刚好有个房间有两张床，可以去他那里暂住一天。于是遇到了很多去徒步的中国朋友们。</p>
+<p>下午6点，终于抵达博卡拉。由于没有提前预订住宿，下车后我不得不开始寻找住处。幸运的是，我遇到了同车的小龙哥，他非常热心，告诉我他的房间有两张床，可以暂住一晚。就这样，我结识了一群同样来徒步的中国朋友。这段意外的相遇让我的博卡拉之旅从一开始就充满了温暖和缘分。</p>
 </blockquote>
 
 <p>
@@ -101,7 +106,7 @@ comments: false
 
 
 <blockquote>
-<p>之后小龙哥他们走EBC，而我走ABC路线，于是第二天就和他分道扬镳了，出发去ABC线路的起始点，开始徒步了。</p>
+<p>旅途总是充满交错与别离，而每一次分别，也意味着新的冒险即将开始。第二天，小龙哥他们选择了EBC路线，而我则踏上了ABC路线的旅途。</p>
 </blockquote>
 
 <p>
@@ -112,7 +117,9 @@ comments: false
 </p>
 
 <blockquote>
-<p>背着个大包真的是要命，走了一天到了晚上之后到中途的一个村休整，真的巨冷，一路下着雨，身上都打湿了，结果晚上住宿的地方还只能用炭木柴火来烤干衣服。第二天衣服一股焦炭味真的有点绝👋。终于熬过晚上，第二天吃完早饭就出发，路上风景像一幅幅油画。</p>
+<p>背着大包走了一天，感觉肩膀都快不是自己的了。终于熬到晚上，拖着疲惫的身子进了半路上的一个小村子休整，结果——巨！冷！一路下着雨，衣服湿透不说，晚上住的地方居然只能靠炭火烤干衣服。看着那堆炭火，我都怀疑自己是不是进了烤肉店。  
+
+第二天醒来，衣服虽然干了，但一股子浓烈的焦炭味，活脱脱成了“行走的碳烤套餐”😂。没办法，硬着头皮吃完早饭继续出发，结果路上风景美得离谱，像是一幅幅巨大的油画，好像大自然在安慰我：昨天让你挨冻，今天赏点美景补偿一下！</p>
 </blockquote>
 <p>
 <figure>
@@ -122,7 +129,14 @@ comments: false
 </p>
 
 <blockquote>
-<p>在我们徒步上山的时候ABC发生雪崩，有些人被埋，当然有些人很幸运，但有些人却永远离不开那里了。遇到从上面下来人们中的一个女生很幸运被她的导游从雪里给拉出来。在半山腰的时候就看见直升飞机去救援，然后被告知封山了不让徒步者继续上山了，所以算是不幸中的万幸，不幸的是遗憾。</p>
+<p>在我们徒步上山的途中，ABC突发雪崩，现场一片混乱。有些人不幸被埋，而有些人幸运地活了下来，但也有人永远留在了那里。  
+</p>
+<p>
+下山途中，我们遇到一群刚刚从上面撤下来的人，其中一个女生脸色苍白，眼神里还带着惊魂未定。她说，自己当时被雪埋住，幸好她的导游反应快，拼命把她从雪里拉了出来，才捡回一条命。听着她的经历，我才真正意识到大自然的威力，生死之间，真的只是一瞬间的事。  
+</p>
+<p>
+到了半山腰，我们看到直升机在山间盘旋救援，随后传来消息——雪崩导致封山，所有徒步者被禁止继续上山。庆幸的是，我们及时止步，躲过了这场灾难；但遗憾的是，没能亲眼看到ABC的壮丽风景，更遗憾的是，那些没能下山的人，永远停留在了这片雪山之中。
+</p>
 </blockquote>
 <p>
 <figure>
@@ -131,7 +145,9 @@ comments: false
   </figure>
 </p>
 <blockquote>
-<p>因为雪崩封山，没法继续徒步，终断了原计划的徒步日程。由于已是半晚于是在View Top Hotel住下，真的很推荐这家Hotel。</p>
+<p>由于雪崩封山，我们的徒步计划被迫终止，没办法继续前进。虽然有些遗憾，但安全第一，还是赶紧找地方落脚。
+
+当时天色已晚，我们就在 **View Top Hotel** 住下了。不得不说，真的超推荐这家酒店！位置绝佳，能俯瞰整片山谷，风景美得不像话。虽然徒步没能走到终点，但能在这里休整一晚，算是不幸中的小确幸了。</p>
 </blockquote>
 <p>
 <figure>
@@ -140,7 +156,7 @@ comments: false
   </figure>
 </p>
 <blockquote>
-<p>站在Hotel前面，安纳普尔纳峰（Annapurna）和鱼尾峰(Machapuchare)双双引入眼前，真的美的不像话。</p>
+<p>站在 **View Top Hotel** 门口，抬头一看，安纳普尔纳峰和鱼尾峰就那么直愣愣地杵在眼前，气势十足，仿佛在说：“哟，没能徒步到终点，但还能看到我俩，不亏吧？”  不得不说，真的美得离谱！光是站着看都觉得像在拍明信片。虽然这次徒步因为雪崩被迫中断，但能在这儿吹着山风，看着这梦幻的风景，还是觉得值了。人生嘛，计划赶不上变化，意外总比惊喜先到，但有时候，意外也是另一种收获！</p>
 </blockquote>
 <p>
 <figure>
@@ -155,7 +171,7 @@ comments: false
   </figure>
 </p>
 <blockquote>
-<p>由于被打乱了计划时，于是就计划返程去费瓦湖（Phewa Lake）附近，然后体验博卡拉具有性价比的滑翔伞🪂。下山之后会有越野车拉客，于是和几个一起下山的陌生人拼车到Phewa Lake，然后找住宿住下。</p>
+<p>计划被打乱后，也没啥好纠结的，干脆调整行程，直接返程去费瓦湖（Phewa Lake），顺便体验一下博卡拉性价比超高的滑翔伞🪂！毕竟，徒步没走完，但天上飞一飞总行吧？  下山后，一群越野车师傅早已在路口“守株待兔”，疯狂拉客。正好遇到几个同样下山的陌生人，大家一拍即合，直接拼车杀到费瓦湖。一路上虽然车开得飞起，但风景是真的巴适。到了湖边，第一件事当然是找住宿，把行李一扔，先睡个舒服觉，明天再去体验翱翔天际的刺激感！</p>
 </blockquote>
 
 <p>
@@ -176,7 +192,7 @@ comments: false
 </p>
 
 <blockquote>
-<p>沿途问了很多家滑翔伞店，终于找到愿意给我们最低价的一家，包含接送+录像拍照+滑翔，于是预定好明天早上在这里集合坐车去滑翔地点。</p>
+<p>一路上逛遍了大大小小的滑翔伞店，开启砍价模式，问到后面感觉自己都快成“滑翔伞市场调研员”了😂。终于，功夫不负有心人，找到了一家愿意给我们最低价的，套餐还挺豪华——包含接送、全程录像拍照，还有专业教练带飞，性价比直接拉满！  敲定价格后，立刻预订，约好明天一早在这里集合坐车去滑翔点。</p>
 </blockquote>
 <p>
 <figure>
@@ -185,8 +201,8 @@ comments: false
   </figure>
 </p>
 <blockquote>
-<p>和我同路的两个大哥，在一起找到住宿之后，正愁不知道去哪吃晚饭呢，同行的一个大哥不知道为什么混进了正在举行婚礼的Party，于是叫我和另一个大哥一起来，于是就这样混入了当地的婚礼派对。</p>
-<p>好喜欢这种随意的活跃的婚礼，所以后悔自己没早点学跳舞了👋。</p>
+<p>找到住宿后，和两个大哥正愁着去哪吃晚饭，结果其中一个大哥不知怎么的混进了正在举行婚礼的派对😂。他拉着我和另一个大哥也跟着进去，顺利加入了婚礼晚宴。现场气氛超级热闹，吃得也很开心，完全是意外的“文化体验”！</p>
+<p>好喜欢这种随意的活跃的婚礼，所以真是后悔自己没早点学跳舞了👋。</p>
 </blockquote>
 <p>
 <figure>
@@ -213,7 +229,7 @@ comments: false
   </figure>
 </p>
 <blockquote>
-<p>慢慢的吃完早餐，就慢悠悠的乘车去集合点了。滑翔高地背后是一览无余的雪山山脉</p>
+<p>早餐吃得很慢，完全没有急着赶时间。吃完后，慢悠悠地坐上车，朝集合点出发。到了滑翔高地，眼前的景色简直惊艳——背后是连绵的雪山山脉，视野开阔，完全没得说，感觉自己瞬间融入了大自然。</p>
 </blockquote>
 <p>
 <figure>
@@ -237,7 +253,7 @@ comments: false
   </figure>
 </p>
 <blockquote>
-<p>认真练习控制滑翔伞的小学徒，费劲的拉着远大于他小小身体好几倍的滑翔伞🪂。突然一种想要学滑翔伞的冲动涌上心头。</p>
+<p>认真练习控制滑翔伞的小学徒，费劲的拉着远大于他小小身体好几倍的滑翔伞🪂。</p>
 </blockquote>
 <p>
 <figure>
@@ -268,7 +284,7 @@ comments: false
 </figure>
 </p>
 <blockquote>
-<p>之后就去买了到加德满都的大巴票，准备返回到加德满都，结束了徒步的日程，但也准备开启在尼泊尔高中做志愿者的日程了。</p>
+<p>后来我就去买了到加德满都的大巴票，准备返回结束徒步行程。虽然这次徒步没走完，但也不算白来，接下来我要开始在尼泊尔的一所高中做志愿者。换个方式，换个体验，感觉又要开始新的一段旅程了！</p>
 </blockquote>
 <p>
 <figure>
