--- a/_posts/2019-01-15-Nepal-ABC.markdown
+++ b/_posts/2019-01-15-Nepal-ABC.markdown
@@ -294,7 +294,17 @@ comments: false
 </p>
 </div>
 
+
+
+
 <!-- EXTRA INFO -->
+
+<blockquote>
+  <p style="color: white;" ><strong>STORY END.</strong><br>
+  “我旅行是因为喜欢到处走动，我享受旅行给我的自由感觉，我很高兴摆脱羁绊，责任和义务，我喜爱未知事物，我结识一些奇人，他们给我片刻欢愉，我时常腻烦我自己，以为借助旅行可以丰富个性，让我略有改观，我旅行一趟，回来的时候不会依然故我”<br>
+  -- 毛姆</p>
+</blockquote>
+
 <div style="font-size: 14px;">
 <p>
 Placeholder text by <a> <strong>YILING YIN</strong></a>.
